--- a/style.css
+++ b/style.css
@@ -3,29 +3,47 @@
     padding:0;
 }
 body{
-    background-color: rgb(10, 198, 245);
-    margin-left:500px;
-    margin-top:170px;
+    background-color: whitesmoke;
+    width: 100%;
 }
+ 
+.main{
+    background-color: white;
+   margin:100px 360px;
+    width: 450px;
+    padding: 50px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.2);}
 h1{
-    color:rgb(39, 2, 124);
-    font-size: 40px;
+    color:black;
+    font-size: 45px;
     margin: 20px;
+    margin-left: 0px;
+    margin-bottom: 28px;
+}
+.icon{
+    width: 45px;
+    position:absolute;
+    left: 695px;
+    top:175px;
 }
 h2{
-    margin:5px;
-    color:rgb(79, 8, 247);
+    font-size: 25px;
+    margin:8px 0px;
+    color:black;
 }
 input{
-    width:300px;
-    height:30px;
+    width:340px;
+    height:38px;
+    margin:5px 0px ;
+    border-color: solid 1px whitesmoke;
+    
 }
 button{
     display: block;
-    margin: 10px;
-    margin-left:0px;
+    margin: 23px 0px;
     font-size: 17px;
-    padding:5px 25px;
+    padding:12px 112px;
     background-color: whitesmoke;
     border: none;
 
@@ -47,4 +65,41 @@ button{
 }
 .Transactions{
     list-style:none;
+}
+
+
+
+@media screen and (max-width:375px) {
+    body{
+    width: 100%; 
+            overflow-x: hidden;
+
+   }
+    .main{
+        margin:100px 10px;
+        width: 300px;
+        padding: 20px;
+    }
+    h1{
+        font-size: 35px;
+    }
+    input{
+        width: 260px;
+        height: 34px;
+    }
+    button{
+        padding: 10px 70px;
+    }
+    .icon{
+        left: 255px;
+        top:135px;
+
+    }
+    .amount-items{
+        margin-left: 200px;
+    }
+    .current-balance{
+        margin-left: 10px;
+    }
+
 }
